// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverrideSet tests change mode : change mode 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main serviceOverrides"
  >
    <div
      class="serviceSection"
    >
      <div
        class="Layout--vertical StyledProps--main specTabs tabHeading StyledProps--flex"
      >
        Use from Stage
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main serviceStageContainer"
          style="align-items: center; justify-content: end;"
        >
          <div
            class="stageSelection"
          >
            <section
              class="serviceStageSelection"
            >
              <label
                class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main"
              >
                <input
                  id="mode_propagate"
                  type="radio"
                />
                <span
                  class="bp3-control-indicator"
                />
              </label>
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 14px;"
              >
                 
                Propagate from existing service
              </p>
            </section>
            <section
              class="serviceStageSelection"
            >
              <label
                class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main"
              >
                <input
                  id="mode_different"
                  type="radio"
                />
                <span
                  class="bp3-control-indicator"
                />
              </label>
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 14px;"
              >
                 
                Deploy different service
              </p>
            </section>
          </div>
          <div>
            <div
              class="bp3-popover-wrapper propagatedropdown Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    placeholder="Search..."
                    style="padding-right: 0px;"
                    type="text"
                    value="Previous Stage st1 [st1]"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main specTabs tabHeading StyledProps--flex"
    >
      <button
        class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main selected"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Stage Overrides
        </span>
      </button>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--padding-xxlarge"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        style="align-items: center;"
      >
        <input
          checked=""
          class="overideCheckbox"
          id="overrideSetCheckbox"
          type="checkbox"
        />
        <label
          class="Label--main"
          for="overrideSetCheckbox"
          style="font-size: 16px;"
        >
          Override service specification details for this stage
        </label>
      </div>
      <p
        class="StyledProps--font StyledProps--main"
        style="font-size: 14px;"
      >
        You can override manifests files, variables etc for each stage. You can also use pre-defined override sets from the service specification. 
      </p>
    </div>
    <div
      class="artifactType overrideAlignCenter"
    >
      <div
        class="bp3-tabs Tabs--main"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_serviceSpecifications_Artifacts"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="Artifacts"
            id="bp3-tab-title_serviceSpecifications_Artifacts"
            role="tab"
            tabindex="0"
          >
            Artifacts
          </div>
          <div
            aria-controls="bp3-tab-panel_serviceSpecifications_Manifests"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="Manifests"
            id="bp3-tab-title_serviceSpecifications_Manifests"
            role="tab"
            tabindex="0"
          >
            Manifests
          </div>
          <div
            aria-controls="bp3-tab-panel_serviceSpecifications_Variables"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="Variables"
            id="bp3-tab-title_serviceSpecifications_Variables"
            role="tab"
            tabindex="0"
          >
            Variables
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-large"
        style="padding-top: 0px;"
      >
        <p
          class="StyledProps--font StyledProps--main"
          style="line-height: 24px;"
        >
          Configure pre-defined override sets (Advanced)
        </p>
        <p
          class="StyledProps--font StyledProps--main"
          style="line-height: 24px;"
        >
          Override sets provide flexibility when specifying the service configuration. It can be used when stages requires different configuration from the initial specifications.
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form>
            <div
              class="Layout--vertical StyledProps--main"
            >
              <span>
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main addFileButton addOverrideSetButton StyledProps--intent-primary"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    + Add Predefined Set
                  </span>
                </button>
              </span>
            </div>
          </form>
        </div>
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-large"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="line-height: 24px;"
          >
            Specify the locations of the artifacts for this service. Harness will fetch the artifacts at the time of deployments. For every pipeline execution, you will specify the build/tag that you want to deploy. Leave the artifacts section empty if your artifactsd are referenced in the manifest files.
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
            >
              <section />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <div
              class="StyledProps--font StyledProps--main rowItem"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                + Add Primary Artifact
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main rowItem"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                + Add Sidecar
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverrideSet tests renders overrideSets without crashing: changed data 1`] = `
<input
  class="overideCheckbox"
  id="overrideSetCheckbox"
  type="checkbox"
/>
`;

exports[`OverrideSet tests renders without crashing 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main serviceOverrides"
  >
    <div
      class="serviceSection"
    >
      <div
        class="Layout--vertical StyledProps--main specTabs tabHeading StyledProps--flex"
      >
        Use from Stage
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main serviceStageContainer"
          style="align-items: center; justify-content: end;"
        >
          <div
            class="stageSelection"
          >
            <section
              class="serviceStageSelection"
            >
              <label
                class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main"
              >
                <input
                  id="mode_propagate"
                  type="radio"
                />
                <span
                  class="bp3-control-indicator"
                />
              </label>
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 14px;"
              >
                 
                Propagate from existing service
              </p>
            </section>
            <section
              class="serviceStageSelection"
            >
              <label
                class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main"
              >
                <input
                  id="mode_different"
                  type="radio"
                />
                <span
                  class="bp3-control-indicator"
                />
              </label>
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 14px;"
              >
                 
                Deploy different service
              </p>
            </section>
          </div>
          <div />
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <div
        class="serviceSection noPadVertical"
      >
        <div
          class="Layout--vertical StyledProps--main specTabs tabHeading StyledProps--flex"
        >
          Service Details
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              style="align-items: center;"
            >
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="serviceRef"
                >
                  Specify your service
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 300px;"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="serviceRef"
                            placeholder="- Select Service -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="#009dff"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  + New Service
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="serviceSection"
    >
      <div
        class="Layout--vertical StyledProps--main specTabs tabHeading StyledProps--flex"
      >
        <span>
          Service Definition
        </span>
      </div>
      <div
        class="artifactType"
      >
        <div>
          <div
            class="serviceSpecType"
          >
            <div>
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main selected nopadleft"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Service Specification
                </span>
              </button>
            </div>
            <div
              class="stageOverridesTab"
            >
              <button
                class="bp3-button bp3-disabled bp3-minimal StyledProps--font Button--button StyledProps--main"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Stage Overrides
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="display: inline-block; margin-top: 12px;"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="font-size: 16px;"
          >
            Deployment Types
          </p>
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected"
            style="width: 90px;"
            tabindex="0"
          >
            <div
              class="Card--cardIcon"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="service-kubernetes"
              >
                <svg
                  height="26"
                  viewBox="0 0 14 14"
                  width="26"
                >
                  <path
                    d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                    fill="#326ce5"
                  />
                  <path
                    d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                    fill="#fff"
                    stroke="#fff"
                    stroke-width="0.25"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-align-center"
                style="font-size: 14px;"
              >
                Kubernetes
              </p>
            </div>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card disabled Card--disabled"
            style="width: 90px;"
          >
            <div
              class="Card--cardIcon"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="service-ecs"
              >
                <svg
                  height="26"
                  viewBox="0 0 14 14"
                  width="26"
                >
                  <path
                    d="M.8 13l-.8-.4V1.3L.8.9l3 5.8zM3.1 11l1.1 1.6L9 10.3l-1.1-.2zM2.2 2.9l1.2-1.7L9 3.7l-1 .2z"
                    fill="#9d5025"
                  />
                  <path
                    d="M2.6 1.3L.9.9V13l1.7-.5z"
                    fill="#f58536"
                  />
                  <path
                    d="M1.7 13.5l.9.5 1.7-7.8L2.6 0l-.9.5zM7.9 4L9 3.8l1.1 3.1L9 10.4l-1.1-.2z"
                    fill="#9d5025"
                  />
                  <g
                    fill="#f58536"
                  >
                    <path
                      d="M4.3.5L2.6 0v14l1.7-.5z"
                    />
                    <path
                      d="M10.2 3.9L2.6 2.4V0l7.6 2.3zM10.4 10.1l-7.8 1.6V14l7.8-2.4z"
                    />
                    <path
                      d="M9 12l1.2-.4V2.4L9 2z"
                    />
                  </g>
                  <path
                    d="M14 8.2L10.7 8l-1.1.1 3.3 3z"
                    fill="#6b3a19"
                  />
                  <path
                    d="M9.4 8.2l3.4.2v2.7l-3.4-.6z"
                    fill="#9d5025"
                  />
                  <path
                    d="M6.3 8.3L9.7 12l1.7-3.6-3.5-.2z"
                    fill="#6b3a19"
                  />
                  <path
                    d="M6.3 8.4l3.4.3v3.4l-3.4-.9zM9.6 5.8l4.4-.1-1.1-2.8-3.3.6z"
                    fill="#9d5025"
                  />
                  <path
                    d="M6.3 5.6l5.1-.1-1.7-3.6-3.4.9z"
                    fill="#9d5025"
                  />
                  <path
                    d="M6.3 5.7l3.4-.4 1.7.2-3.5.3zM14 5.8l-3.3.2-1.1-.1 3.3-.3z"
                    fill="#fbbf93"
                  />
                  <g
                    fill="#f58536"
                  >
                    <path
                      d="M12.8 8.3l1.2-.1v2.5l-1.2.4zM11.4 8.5l-1.7.2v3.4l1.7-.5zM12.8 5.7l1.2.1V3.3l-1.2-.4zM11.4 5.5l-1.7-.2V1.9l1.7.5z"
                    />
                  </g>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-align-center"
                style="font-size: 14px;"
              >
                Amazon ECS
              </p>
            </div>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card disabled Card--disabled"
            style="width: 90px;"
          >
            <div
              class="Card--cardIcon"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="main-service-ami"
              >
                <svg
                  height="26"
                  viewBox="0 0 12 14"
                  width="26"
                >
                  <mask
                    height="5"
                    id="main-service-ami_svg__a"
                    maskUnits="userSpaceOnUse"
                    width="6"
                    x="0"
                    y="0"
                  >
                    <path
                      d="M0 0h6v5H0z"
                      fill="#fff"
                    />
                  </mask>
                  <mask
                    height="4.9"
                    id="main-service-ami_svg__b"
                    maskUnits="userSpaceOnUse"
                    width="5.7"
                    x="0"
                    y="0"
                  >
                    <path
                      d="M0 0h5.7v5H0z"
                      fill="#fff"
                    />
                  </mask>
                  <mask
                    height="2"
                    id="main-service-ami_svg__c"
                    maskUnits="userSpaceOnUse"
                    width="11.5"
                    x="0"
                    y="0"
                  >
                    <path
                      d="M0 0h11.5v2H0z"
                      fill="#fff"
                    />
                  </mask>
                  <path
                    d="M.1 0c.6.3 1.2.6 1.8.8 1.3.6 2.6 1.3 3.9 1.9.1.2.2.3.2.5v1.6c0 .1 0 .2-.1.2-1.8-.4-3.5-.9-5.3-1.3-.2 0-.4 0-.5-.2v-.3V.3C0 .2 0 .1.1 0"
                    fill="#fb862e"
                    mask="url(#main-service-ami_svg__a)"
                    transform="translate(5.634 .02)"
                  />
                  <path
                    d="M5.7 0v3.5c0 .1-.1.1-.2.1-1.7.5-3.4.9-5.1 1.3-.1 0-.3.1-.4 0V3s0-.1.2-.2C2 1.9 3.8 1 5.7 0c-.1 0 0 0 0 0"
                    fill="#a0501e"
                    mask="url(#main-service-ami_svg__b)"
                    transform="translate(.042 .02)"
                  />
                  <path
                    d="M.1 1.4C.9 1.2 1.8 1 2.6.8c1-.2 2-.5 3-.7h.1c.7 0 1.3.2 1.9.3 1.2.3 2.5.6 3.7.9.1 0 .2 0 .2.1-1.2.1-2.4.2-3.7.4-.6.1-1.3.2-2 .2-.4.1-.8 0-1.3-.1-1.2-.1-2.3-.2-3.5-.3-.3-.1-.6-.1-.9-.2-.1.1-.1.1 0 0-.1 0-.1 0 0 0"
                    fill="#6e3915"
                    mask="url(#main-service-ami_svg__c)"
                    transform="translate(0 3.55)"
                  />
                  <path
                    d="M8.7 8.6c0 .2-.1.2-.3.3-.8.1-1.7.3-2.5.4h-.1c-.1 0-.1-.1-.1-.2V6.2c0-.1 0-.2.1-.3.6 0 1.2.1 1.9.1.3 0 .6 0 .9.1.1 0 .2 0 .2.1.1.1.1.1.1.2v1.9c-.1.1-.1.3-.2.3"
                    fill="#fb862e"
                  />
                  <path
                    d="M5.7 5.9v3.5c-.6-.2-1.2-.3-1.9-.4-.3-.1-.6-.1-.9-.2-.1-.8 0-1.6 0-2.4 0-.1 0-.2.1-.2 0 0 .1 0 .1-.1.8-.1 1.6-.2 2.5-.2zM5.9 13.9c0 .1-.1.1-.1 0-.6-.3-1.1-.6-1.7-.9-.1-.1-.2-.1-.1-.2v-.6s-.1-.1-.1-.2V10.1c.1-.1.2-.1.3 0 .5.1.9.2 1.4.3.2 0 .3 0 .5.1.1.2.1.4.1.6v.8c0 .6-.1 1.2 0 1.8-.2.1-.2.1-.3.2"
                    fill="#a0501e"
                  />
                  <path
                    d="M5.9 13.9c0-.9 0-1.9.1-2.8 0-.2.1-.4 0-.6 0-.1.1-.1.1-.1.5-.1 1.1-.3 1.6-.5h.2c.1.2.1.3.1.3V12c0 .1 0 .2-.1.3v.1c.1.5-.1.7-.5.9-.5.1-1 .4-1.5.6"
                    fill="#fb862e"
                  />
                  <path
                    d="M9.6 6.2c.6.1 1.2.1 1.8.2.1 0 .1.1.1.2v1.7c0 .1 0 .1-.1.2-.6.1-1.3.2-1.9.3h-.1c.1-.3.1-.6.1-.9V6.6c.1-.2.1-.3.1-.4"
                    fill="#fb872e"
                  />
                  <path
                    d="M1.7 8.6c-.5 0-1-.2-1.5-.3-.1 0-.1-.1-.1-.1V6.4c0-.1 0-.1.1-.1.5 0 1-.1 1.5-.2.1.1.1.2.1.3v2c0 .1 0 .2-.1.2"
                    fill="#a0501e"
                  />
                  <g
                    fill="#fb862e"
                  >
                    <path
                      d="M3.9 10.1v2.1c-.3 0-.6.2-.9.3-.1 0-.2.1-.3.1-.1-.1-.1-.1-.1-.2v-2.3-.2c0-.1.1-.1.1-.1.6-.1 1.1-.2 1.7-.3h.2v.3c-.1.1-.5.1-.7.3 0-.1 0-.1 0 0M10 11.5c.1.3-.1.5-.3.6-.3.1-.5.3-.8.4-.1 0-.1-.1-.1-.2v-.8-.3-1.4s0-.1.1-.1c.4-.1.7-.3 1.1-.3 0 .2 0 .2.1.3v1.6c0 .1-.1.2-.1.2M1.7 8.6V6.4v-.2h1.2v2.7c0-.2-.1-.2-.2-.2-.4-.1-.7 0-1-.1"
                    />
                  </g>
                  <path
                    d="M8.8 9.8v2.7c-.3-.1-.6-.2-.9-.2v-2.1-.2c-.5-.1-.9-.1-1.4-.3 0-.1-.1-.2.1-.2.7 0 1.3.2 2 .3z"
                    fill="#a0501c"
                  />
                  <path
                    d="M11.5 9.1c.1 0 .1 0 .1.1V11c0 .1 0 .1-.1.1-.4.1-.8.3-1.2.4h-.1V9.6v-.3c.1-.1.1-.1.2-.1.5 0 .8-.1 1.1-.1"
                    fill="#fb872e"
                  />
                  <path
                    d="M2.7 9.8v2.7l-.9-.6c-.2-.1 0-.3-.1-.5 0-.1-.1-.1-.1-.2V9.5l.1-.1c.4.2.7.2 1 .4"
                    fill="#a0501e"
                  />
                  <path
                    d="M9.6 6.2v2.4c0 .1-.1.1-.1.1-.3 0-.5 0-.8-.1 0-.8-.1-1.6 0-2.4z"
                    fill="#a1501e"
                  />
                  <path
                    d="M6.5 9.7c.5.1.9.2 1.3.3-.6.2-1.1.3-1.7.5-.1 0-.1 0-.2.1h-.3c-.6-.1-1.1-.3-1.7-.4-.1 0-.1 0-.2-.1.3-.1.7-.1 1-.2.6-.3 1.2-.4 1.8-.2"
                    fill="#fdbd8f"
                  />
                  <path
                    d="M1.7 9.5v1.9c-.2 0-.4.1-.7.1-.2 0-.2-.1-.2-.2v-.6-1.2-.3h.3c.5-.1 1.1-.1 1.6-.1.1.2 0 .2-.2.2-.2.1-.5.2-.8.2z"
                    fill="#fb862e"
                  />
                  <path
                    d="M.8 11.5l-.6-.3c-.1 0-.1-.1-.1-.2V9.2c0-.1.1 0 .1-.1.2 0 .4 0 .6.1.1 0 .2 0 .2.1v2c-.1.1-.1.2-.2.2"
                    fill="#a0501e"
                  />
                  <path
                    d="M10.4 9.3v2c0 .1 0 .2-.1.2H10V9.7c0-.1.1-.2-.1-.2-.3 0-.7-.1-1-.1-.1 0-.2 0-.2-.1 0-.2.1-.1.2-.1h1.3c0 .1.1 0 .2.1"
                    fill="#a1501c"
                  />
                  <path
                    d="M8.7 9.3c.3.1.7.1 1 .2.1 0 .2 0 .2.1-.4 0-.8.1-1.1.2-.8-.1-1.5-.2-2.2-.3.4-.1.9-.1 1.3-.2.3-.1.5 0 .8 0M1.7 9.5s-.1 0-.2-.1c.3 0 .7-.1 1-.1.1 0 .3.1.3-.2 0 .1.2.1.3.1.6-.1 1.1.1 1.6.1h.1c-.6.3-1.2.4-1.8.5h-.3c-.3-.1-.7-.2-1-.3"
                    fill="#fdbd8f"
                  />
                  <path
                    d="M.9 9.3c-.3-.1-.5-.2-.8-.2.2-.1.5-.1.7-.1.7-.1 1.3-.1 2 .1-.2.1-.4 0-.6.1-.5 0-.9.1-1.3.1zM10.4 9.3h-.2c-.1-.1-.2 0-.2 0H9.4c-.1-.1-.2 0-.2-.1.6-.2 1.2-.1 1.9-.1.2 0 .4 0 .6.1-.6 0-.9.1-1.3.1"
                    fill="#fdbd90"
                  />
                  <path
                    d="M.9 9.3v2c0 .1 0 .2.1.2-.1 0-.1.1-.2 0 .1 0 0-.1 0-.2.1-.7.1-1.3.1-2"
                    fill="#d58954"
                  />
                  <path
                    d="M8.8 12.5v-1.2c.1.3 0 .7 0 1v.2s0 .1 0 0"
                    fill="#f19754"
                  />
                  <path
                    d="M9.1 9.1c.1.1.2 0 .2.1h-.4c0-.1.1-.1.2-.1"
                    fill="#f9ceaf"
                  />
                  <path
                    d="M9.5 9.3c.1-.1.2-.1.2 0h-.2"
                    fill="#fad2b5"
                  />
                  <path
                    d="M9.9 9.2c.1 0 .2-.1.2.1 0 0-.1 0-.2-.1 0 .1 0 .1 0 0z"
                    fill="#f9d4ba"
                  />
                  <path
                    d="M9.9 9.2c0 .1 0 .1 0 0-.1.1-.1.1-.2 0z"
                    fill="#e1bea7"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-align-center"
                style="font-size: 14px;"
              >
                AWS AMI
              </p>
            </div>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card disabled Card--disabled"
            style="width: 90px;"
          >
            <div
              class="Card--cardIcon"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="app-aws-code-deploy"
              >
                <svg
                  height="26"
                  viewBox="0 0 28 32"
                  width="26"
                >
                  <g
                    fill="none"
                  >
                    <path
                      d="M4 26l-4-1.732V6.732L4 5z"
                      fill="#4B612C"
                    />
                    <path
                      d="M18 22.536L3 26V5l15 3.464z"
                      fill="#759C3E"
                    />
                    <path
                      d="M7 12.8l6.781-.8.219.2v6.6l-.219.2L7 18.2z"
                      fill="#4B612C"
                    />
                    <path
                      d="M28 11.25l-6.682.75L7 9.5 14.398 7z"
                      fill="#3C4929"
                    />
                    <path
                      d="M27 21.667L20.318 21 6 23.222 13.875 25z"
                      fill="#B7CA9D"
                    />
                    <path
                      d="M7 28.786L13.781 32 14 24.714 7 23z"
                      fill="#4B612C"
                    />
                    <path
                      d="M26 25.714L14 32v-7.633L26 21z"
                      fill="#759C3E"
                    />
                    <path
                      d="M7 3.214L14 0v7.286L7 9z"
                      fill="#4B612C"
                    />
                    <path
                      d="M27.25 18.667L13 20.3v-8.167L27.25 14zm0-7L13 8.167V.233l14.25 6.534z"
                      fill="#759C3E"
                    />
                  </g>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-align-center"
                style="font-size: 14px;"
              >
                CodeDeploy
              </p>
            </div>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card disabled Card--disabled"
            style="width: 90px;"
          >
            <div
              class="Card--cardIcon"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="command-winrm"
              >
                <svg
                  height="26"
                  viewBox="0 0 14 11"
                  width="26"
                >
                  <path
                    d="M3 0c-.2 0-.5 0-.7.2S2 .6 2 .9C1.3 3.8.7 6.7 0 9.7c0 .3 0 .6.2.9s.5.4.9.4H11c.3 0 .5-.1.7-.3s.3-.4.3-.6c.6-2.9 1.3-5.9 1.9-8.8.1-.3.1-.7-.1-.9s-.5-.4-.9-.4zm0 1h9.9v.1C12.3 4 11.6 7 11 9.9v.1H1v-.1C1.6 6.9 2.3 4 3 1c-.1 0 0 0 0 0zm1.8.5c-.3 0-.6.2-.7.4s-.1.6.1.9l2.4 2.6-3.8 2.7c-.2.2-.3.5-.3.7s.2.5.5.6.5.1.8-.1L8.3 6c.2-.1.3-.3.3-.5s-.1-.4-.2-.6l-3-3.2c-.2-.1-.4-.2-.6-.2zM6.7 8c-.2 0-.5.1-.6.4-.1.2-.1.5 0 .7s.4.4.7.4h2c.3 0 .5-.1.7-.4.1-.2.1-.5 0-.8-.2-.2-.5-.3-.8-.3z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-align-center"
                style="font-size: 14px;"
              >
                WinRM
              </p>
            </div>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card disabled Card--disabled"
            style="width: 90px;"
          >
            <div
              class="Card--cardIcon"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="app-aws-lambda"
              >
                <svg
                  height="26"
                  viewBox="0 0 26 27"
                  width="26"
                >
                  <path
                    d="M12.706 14.587a34419.9 34419.9 0 00-3.838 5.664 4042.86 4042.86 0 01-3.574 5.266.241.241 0 01-.17.099c-1.683-.015-3.367-.033-5.05-.055-.018 0-.037-.006-.074-.011a.902.902 0 01.047-.103l3.523-5.473 3.126-4.848c1.156-1.795 2.31-3.592 3.465-5.39.17-.265.348-.525.51-.795a.329.329 0 00.034-.238c-.31-.995-.628-1.986-.945-2.978-.135-.424-.277-.847-.404-1.274-.041-.137-.109-.179-.249-.178-1.058.004-2.109.003-3.164.003-.2 0-.2 0-.2-.198 0-1.3 0-2.6-.004-3.9 0-.144.047-.176.183-.176 2.123.003 4.247.003 6.37 0a.205.205 0 01.225.151 36080.34 36080.34 0 007.279 18.34c.405 1.02.814 2.042 1.216 3.066.047.124.097.148.223.11 1.113-.346 2.228-.681 3.34-1.027.14-.043.192-.014.235.125.38 1.196.767 2.389 1.151 3.583.013.041.023.083.039.14-.08.03-.154.063-.23.084-2.53.803-5.06 1.608-7.587 2.412-.12.038-.157-.003-.197-.105-.772-1.96-1.546-3.92-2.321-5.88l-2.277-5.754-.34-.866c-.018-.049-.043-.092-.08-.168l-.262.374z"
                    fill="#FA7E14"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-align-center"
                style="font-size: 14px;"
              >
                AWS Lambda
              </p>
            </div>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card disabled Card--disabled"
            style="width: 90px;"
          >
            <div
              class="Card--cardIcon"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="service-pivotal"
              >
                <svg
                  height="26"
                  viewBox="0 0 14 11"
                  width="26"
                >
                  <path
                    d="M8.2 8.5c0-2.2-1.8-4-4-4s-4 1.8-4 4c0 .4 0 .7.1 1.1 0 .1.1.3.1.4h1.3c.1 0 .2-.1.2-.2v-.1c0-.1-.1-.2-.1-.2-.6-1.4 0-2.9 1.4-3.5S6 6 6.6 7.4c.3.7.3 1.5 0 2.1 0 .1-.1.2-.1.3s0 .2.1.2H7.8c.1 0 .1 0 .1-.1.1-.1.1-.2.1-.4.1-.3.2-.7.2-1z"
                    fill="#008774"
                  />
                  <path
                    d="M8.7 3.1c-2.8 0-5.1 2.3-5.1 5.1 0 .4.1.9.2 1.3 0 .1.1.3.1.4.1.1.1.1.2.1h1.1c.1 0 .2-.1.2-.2v-.1c0-.1-.1-.2-.1-.3-.7-2 .3-4.1 2.3-4.8s4 .4 4.7 2.4c.3.8.3 1.7 0 2.6 0 .1-.1.2-.1.3s0 .2.1.2H13.5c.1 0 .1 0 .1-.1s.1-.3.1-.4c.7-2.7-.9-5.5-3.6-6.2-.5-.2-.9-.3-1.4-.3z"
                    fill="#00ae9e"
                  />
                  <path
                    d="M11.6 4.5C11.6 2 9.5 0 7.1 0 4.6 0 2.5 2 2.5 4.5v.4h1.3C3.7 3.1 5 1.6 6.7 1.4c1.8-.2 3.3 1.1 3.5 2.9v.4c0 .6-.3 1.2-.6 1.7-.1.1 0 .2 0 .2h1.3c.1 0 .1 0 .2-.1.3-.6.5-1.3.5-2z"
                    fill="#008774"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-align-center"
                style="font-size: 14px;"
              >
                PCF
              </p>
            </div>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card disabled Card--disabled"
            style="width: 90px;"
          >
            <div
              class="Card--cardIcon"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="secret-ssh"
              >
                <svg
                  height="26"
                  viewBox="0 0 89 73"
                  width="26"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    transform="translate(-1 -1)"
                  >
                    <path
                      d="M86 0H5a5 5 0 00-5 5v65a5 5 0 005 5h81a5 5 0 005-5V5a5 5 0 00-5-5z"
                      fill="#1C1C28"
                      fill-rule="nonzero"
                    />
                    <path
                      d="M5 2h81a3 3 0 013 3v65a3 3 0 01-3 3H5a3 3 0 01-3-3V5a3 3 0 013-3z"
                      fill="#FFE981"
                      fill-rule="nonzero"
                    />
                    <path
                      d="M69.5 16.5v2H.5v-2zm16.5 0v2H74v-2zM7 6a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1z"
                      fill="#1C1C28"
                      fill-rule="nonzero"
                    />
                    <path
                      d="M16.2 52.8c.633 0 1.167-.217 1.6-.65l8.4-8.4c.067-.067.1-.117.1-.15.167-.167.3-.383.4-.65.1-.267.15-.517.15-.75v-.05c0-.333-.067-.633-.2-.9-.133-.3-.283-.517-.45-.65l-8.4-8.4c-.2-.2-.442-.35-.725-.45a3.922 3.922 0 00-.875-.2c-.567-.033-1.083.183-1.55.65-.233.2-.408.45-.525.75a2.34 2.34 0 00-.175.85c0 .6.233 1.133.7 1.6l4.75 4.75c.567.567.85 1.242.85 2.025 0 .783-.283 1.458-.85 2.025l-.975.975c-.317.317-.642.625-.975.925-.467.467-.933.942-1.4 1.425-.467.483-.933.958-1.4 1.425-.4.4-.633.933-.7 1.6 0 .3.067.583.2.85s.3.517.5.75c.167.2.4.358.7.475.3.117.583.175.85.175z"
                      fill="#22272D"
                      fill-rule="nonzero"
                    />
                    <rect
                      fill="#1C1C28"
                      height="3"
                      rx="1.5"
                      width="40"
                      x="28"
                      y="50"
                    />
                  </g>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-align-center"
                style="font-size: 14px;"
              >
                Secure Shell
              </p>
            </div>
          </div>
        </div>
        <div
          class="artifactType"
        >
          <div>
            <div
              class="bp3-tabs Tabs--main"
            >
              <div
                class="bp3-tab-list"
                role="tablist"
              >
                <div
                  class="bp3-tab-indicator-wrapper"
                  style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
                >
                  <div
                    class="bp3-tab-indicator"
                  />
                </div>
                <div
                  aria-controls="bp3-tab-panel_serviceSpecifications_Artifacts"
                  aria-disabled="false"
                  aria-expanded="true"
                  aria-selected="true"
                  class="bp3-tab"
                  data-tab-id="Artifacts"
                  id="bp3-tab-title_serviceSpecifications_Artifacts"
                  role="tab"
                  tabindex="0"
                >
                  Artifacts
                </div>
                <div
                  aria-controls="bp3-tab-panel_serviceSpecifications_Manifests"
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-selected="false"
                  class="bp3-tab"
                  data-tab-id="Manifests"
                  id="bp3-tab-title_serviceSpecifications_Manifests"
                  role="tab"
                  tabindex="0"
                >
                  Manifests
                </div>
                <div
                  aria-controls="bp3-tab-panel_serviceSpecifications_Variables"
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-selected="false"
                  class="bp3-tab"
                  data-tab-id="Variables"
                  id="bp3-tab-title_serviceSpecifications_Variables"
                  role="tab"
                  tabindex="0"
                >
                  Variables
                </div>
              </div>
              <div
                aria-hidden="false"
                aria-labelledby="bp3-tab-title_serviceSpecifications_Artifacts"
                class="bp3-tab-panel"
                id="bp3-tab-panel_serviceSpecifications_Artifacts"
                role="tabpanel"
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-large"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                    style="line-height: 24px;"
                  >
                    Specify the locations of the artifacts for this service. Harness will fetch the artifacts at the time of deployments. For every pipeline execution, you will specify the build/tag that you want to deploy. Leave the artifacts section empty if your artifactsd are referenced in the manifest files.
                  </p>
                  <div
                    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                    >
                      <section />
                    </div>
                  </div>
                  <div
                    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main rowItem"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        + Add Primary Artifact
                      </p>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main rowItem"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        + Add Sidecar
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-large"
          style="padding-top: 0px;"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="line-height: 24px;"
          >
            Configure pre-defined override sets (Advanced)
          </p>
          <p
            class="StyledProps--font StyledProps--main"
            style="line-height: 24px;"
          >
            Override sets provide flexibility when specifying the service configuration. It can be used when stages requires different configuration from the initial specifications.
          </p>
          <section
            class="collapseContainer"
          >
            <div
              class="StyledProps--font StyledProps--main"
            />
          </section>
          <p
            class="StyledProps--font StyledProps--main StyledProps--intent-primary"
            style="cursor: pointer;"
          >
            + Create new override set
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
